--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-    
+    <!--header section starts-->
+        <header class="header">
+            <div class="fas fa-bars icons" id="menu-btn"></div>
+            <div id="search-btn" class="fas fa-search icons"></div>
+            <nav class="navbar">
+                <a href="#home">Home</a>
+                <a href="#menu">Menu</a>
+                <a href="#about">Sobre</a>
+                <span class="space"></span>
+                <a href="#reviews">Avaliações</a>
+                <a href="#contact">Contatos</a>
+                <a href="#blogs">Blogs</a>
+            </nav>
+            <a href="#" class="fas fa-shopping-cart icons"></a>
+            <a href="#home" class="logo"><img src="img/logo.png" alt="imagem logo"></a>
+        </header>
+    <!--header section ends-->
+   <!--custom js file link-->
+   <script src="java/script.js"></script>
 </body>
 </html>
