--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!--custon css file link-->
     <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/header.css">
 </head>
 <body>
     <!--header section starts-->
