--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             </nav>
             <a href="#" class="fas fa-shopping-cart icons"></a>
             <a href="#home" class="logo"><img src="img/logo.png" alt="imagem logo"></a>
+            <form action="" class="search-form">
+                <input type="search" name="" placeholder="Procure aqui.." id="search-box">
+                <label for="search-box" class="fas fa-search"></label>
+            </form>
         </header>
     <!--header section ends-->
    <!--custom js file link-->
