--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="#home" class="logo"><img src="img/logo.png" alt="imagem logo"></a>
             <form action="" class="search-form">
                 <input type="search" name="" placeholder="Procure aqui.." id="search-box">
-                <label for="search-box" class="fas fa-search"></label>
+                <label for="search-box" class="fas fa-search icons"></label>
             </form>
         </header>
     <!--header section ends-->
