--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
             </form>
         </header>
     <!--header section ends-->
+
+    <!--home section starts-->
+    <section class="home" id="home">
+        <div class="content">
+            <img src="img/burger-baner.png" alt="imagem principal">
+            <h3>Tão gostoso que você vai enlouquecer</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus quos blanditiis quam distinctio culpa molestiae labore iste eveniet laudantium. Magni fuga tempora autem vel, blanditiis nisi dolore ad minima perspiciatis?</p>
+            <a href="#menu" class="btn">Nosso menu</a>
+        </div>
+    </section>
+    <!--home section ends-->
    <!--custom js file link-->
    <script src="java/script.js"></script>
 </body>
