--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!--custon css file link-->
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/mobile.css">
 </head>
 <body>
