--- a/index.html
+++ b/index.html
@@ -47,6 +47,27 @@
         </div>
     </section>
     <!--home section ends-->
+
+    <!--service section starts-->
+    <section class="service">
+        <div class="box">
+            <i class="fas fa-hamburger"></i>
+            <h3>Melhor qualidade</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat repudiandae quae, facere impedit voluptas in perspiciatis dicta, excepturi voluptatibus alias magni rem cupiditate inventore necessitatibus beatae, soluta hic ex nobis.</p>
+        </div>
+        <div class="box">
+            <i class="fas fa-shipping-fast"></i>
+            <h3>Entrega grátis</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat repudiandae quae, facere impedit voluptas in perspiciatis dicta, excepturi voluptatibus alias magni rem cupiditate inventore necessitatibus beatae, soluta hic ex nobis.</p>
+        </div>
+        <div class="box">
+            <i class="fas fa-headset"></i>
+            <h3>24/7 Apoio, suporte</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat repudiandae quae, facere impedit voluptas in perspiciatis dicta, excepturi voluptatibus alias magni rem cupiditate inventore necessitatibus beatae, soluta hic ex nobis.</p>
+        </div>
+    </section>
+    <!--service section ends-->
+
    <!--custom js file link-->
    <script src="java/script.js"></script>
 </body>
