--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@
     </section>
     <!--service section ends-->
 
+    <!--menu section starts-->
+    <section class="menu" id="menu">
+        <div class="heading">
+            <img src="img/title-img.png" alt="imagem seção menu">
+            <h3>Nosso menu</h3>
+        </div>
+    </section>
+    <!--menu section ends-->
+
    <!--custom js file link-->
    <script src="java/script.js"></script>
 </body>
