--- a/index.html
+++ b/index.html
@@ -75,6 +75,22 @@
             <img src="img/title-img.png" alt="imagem seção menu">
             <h3>Nosso menu</h3>
         </div>
+        <div class="box-container">
+            <div class="box">
+                <img src="img/product-1.png" alt="imagem amburguer 1">
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h3>Hambúrguer de queijo</h3>
+                    <div class="price"></div>
+                </div>
+            </div>
+        </div>
     </section>
     <!--menu section ends-->
 
