--- a/index.html
+++ b/index.html
@@ -87,7 +87,83 @@
                         <i class="fas fa-star-half-alt"></i>
                     </div>
                     <h3>Hambúrguer de queijo</h3>
-                    <div class="price"></div>
+                    <div class="price">R$ 29,99</div>
+                    <a href="#" class="btn">Adicionar ao carrinho</a>
+                </div>
+            </div>
+            <div class="box">
+                <img src="img/product-2.png" alt="imagem amburguer 1">
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h3>Hambúrguer de queijo</h3>
+                    <div class="price">R$ 29,99</div>
+                    <a href="#" class="btn">Adicionar ao carrinho</a>
+                </div>
+            </div>
+            <div class="box">
+                <img src="img/product-3.png" alt="imagem amburguer 1">
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h3>Hambúrguer de queijo</h3>
+                    <div class="price">R$ 29,99</div>
+                    <a href="#" class="btn">Adicionar ao carrinho</a>
+                </div>
+            </div>
+            <div class="box">
+                <img src="img/product-4.png" alt="imagem amburguer 1">
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h3>Hambúrguer de queijo</h3>
+                    <div class="price">R$ 29,99</div>
+                    <a href="#" class="btn">Adicionar ao carrinho</a>
+                </div>
+            </div>
+            <div class="box">
+                <img src="img/product-5.png" alt="imagem amburguer 1">
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h3>Hambúrguer de queijo</h3>
+                    <div class="price">R$ 29,99</div>
+                    <a href="#" class="btn">Adicionar ao carrinho</a>
+                </div>
+            </div>
+            <div class="box">
+                <img src="img/product-6.png" alt="imagem amburguer 1">
+                <div class="content">
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                    <h3>Hambúrguer de queijo</h3>
+                    <div class="price">R$ 29,99</div>
+                    <a href="#" class="btn">Adicionar ao carrinho</a>
                 </div>
             </div>
         </div>
