--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <section class="menu" id="menu">
         <div class="heading">
             <img src="img/title-img.png" alt="imagem seção menu">
-            <h3>Nosso menu</h3>
+            <h3>Menu</h3>
         </div>
         <div class="box-container">
             <div class="box">
