--- a/index.html
+++ b/index.html
@@ -171,6 +171,27 @@
     </section>
     <!--menu section ends-->
 
+    <!--about section starts-->
+    <section class="about">
+        <div class="image">
+            <img src="img/about-img.png" alt="imagem seção sobre">
+        </div>
+        <div class="content">
+            <h3 class="title">Entre no paraíso do hambúrguer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quo dicta alias, maiores perspiciatis, quod quasi, fugit eos sapiente accusamus inventore! Labore nihil provident repellat esse id incidunt, rem sunt?</p>
+            <div class="icons">
+                <h3><i class="fas fa-check"></i>Melhor Preço</h3>
+                <h3><i class="fas fa-check"></i>Melhor Serviço</h3>
+                <h3><i class="fas fa-check"></i>Ingrediente fresco</h3>
+                <h3><i class="fas fa-check"></i>Pães assados</h3>
+                <h3><i class="fas fa-check"></i>queijo natural</h3>
+                <h3><i class="fas fa-check"></i>Vegano & Não-vegano</h3>
+            </div>
+            <a href="#" class="btn">Leia mais</a>
+        </div>
+    </section>
+    <!--about section ends-->
+
    <!--custom js file link-->
    <script src="java/script.js"></script>
 </body>
