--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/service.css">
     <link rel="stylesheet" href="css/menu.css">
+    <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/mobile.css">
 </head>
 <body>
@@ -172,7 +173,7 @@
     <!--menu section ends-->
 
     <!--about section starts-->
-    <section class="about">
+    <section class="about" id="about">
         <div class="image">
             <img src="img/about-img.png" alt="imagem seção sobre">
         </div>
@@ -185,7 +186,7 @@
                 <h3><i class="fas fa-check"></i>Ingrediente fresco</h3>
                 <h3><i class="fas fa-check"></i>Pães assados</h3>
                 <h3><i class="fas fa-check"></i>queijo natural</h3>
-                <h3><i class="fas fa-check"></i>Vegano & Não-vegano</h3>
+                <h3><i class="fas fa-check"></i>Veg & Não-veg</h3>
             </div>
             <a href="#" class="btn">Leia mais</a>
         </div>
