--- a/index.html
+++ b/index.html
@@ -193,6 +193,53 @@
     </section>
     <!--about section ends-->
 
+    <!--reviews section starts-->
+    <section class="reviews" id="reviews">
+        <div class="heading">
+            <img src="img/title-img.png" alt="imagem seção revisar">
+            <h3>Depoimento</h3>
+        </div>
+        <div class="box-container">
+            <div class="box">
+                <img src="img/pic-1.png" alt="imagem mulher">
+                <h3>John deo</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum accusantium inventore accusamus non dolorem, obcaecati natus minima, nesciunt voluptas officia corrupti quidem iure, expedita totam corporis ex necessitatibus alias et.</p>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+            </div>
+            <div class="box">
+                <img src="img/pic-2.png" alt="imagem homem">
+                <h3>John deo</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum accusantium inventore accusamus non dolorem, obcaecati natus minima, nesciunt voluptas officia corrupti quidem iure, expedita totam corporis ex necessitatibus alias et.</p>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+            </div>
+            <div class="box">
+                <img src="img/pic-3.png" alt="imagem mulher2">
+                <h3>John deo</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum accusantium inventore accusamus non dolorem, obcaecati natus minima, nesciunt voluptas officia corrupti quidem iure, expedita totam corporis ex necessitatibus alias et.</p>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--reviews section ends-->
+
    <!--custom js file link-->
    <script src="java/script.js"></script>
 </body>
