--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/service.css">
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/reviews.css">
     <link rel="stylesheet" href="css/mobile.css">
 </head>
 <body>
