--- a/index.html
+++ b/index.html
@@ -241,6 +241,43 @@
     </section>
     <!--reviews section ends-->
 
+    <!--contact section starts-->
+    <section class="contact" id="contact">
+        <div class="heading">
+            <img src="img/title-img.png" alt="imagem título contato">
+            <h3>Contate-nos</h3>
+        </div>
+        <div class="row">
+            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3651.276641116966!2d-46.720058185066435!3d-23.773161284578173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce492e72d23ccd%3A0xee94aef999efe202!2sR.%20Sat%C3%A9lite%20Ariel%20-%20Jardim%20Casa%20Grande%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2004858-490!5e0!3m2!1spt-BR!2sbr!4v1640645503297!5m2!1spt-BR!2sbr" 
+            allowfullscreen="" 
+            loading="lazy">
+            </iframe>
+            <div class="form">
+                <div class="icons-container">
+                    <div class="icons">
+                        <i class="fas fa-map"></i>
+                        <h3>Local :</h3>
+                        <p>Mumbai, India - 400140</p>
+                    </div>
+                    <div class="icons">
+                        <i class="fas fa-envelope"></i>
+                        <h3>Email :</h3>
+                        <p>gleibson.santos04@gmail.com</p>
+                        <p>nshair@gmail.com</p>
+                    </div>
+                    <div class="icons">
+                        <i class="fas fa-phone"></i>
+                        <h3>Phone :</h3>
+                        <p>+55 81 98469-7069</p>
+                        <p>+55 81 99794-0995</p>
+                    </div>
+                </div>
+                <form action=""></form>
+            </div>
+        </div>
+    </section>
+    <!--contact section ends-->
+
    <!--custom js file link-->
    <script src="java/script.js"></script>
 </body>
