--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/reviews.css">
+    <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/mobile.css">
 </head>
 <body>
@@ -272,7 +273,13 @@
                         <p>+55 81 99794-0995</p>
                     </div>
                 </div>
-                <form action=""></form>
+                <form action="">
+                    <input type="text" placeholder="Nome completo" class="box">
+                    <input type="email" placeholder="Email" class="box">
+                    <input type="number" placeholder="Telefone" class="box">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Mensagem"></textarea>
+                    <input type="submit" value="enviar mensagem">
+                </form>
             </div>
         </div>
     </section>
