--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
                     <input type="text" placeholder="Nome completo" class="box">
                     <input type="email" placeholder="Email" class="box">
                     <input type="number" placeholder="Telefone" class="box">
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Mensagem"></textarea>
-                    <input type="submit" value="enviar mensagem">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Mensagem" class="box"></textarea>
+                    <input type="submit" value="enviar mensagem" class="btn">
                 </form>
             </div>
         </div>
