--- a/index.html
+++ b/index.html
@@ -285,6 +285,59 @@
     </section>
     <!--contact section ends-->
 
+    <!--blogs section starts-->
+    <section class="blogs" id="blogs">
+        <div class="heading">
+            <img src="img/title-img.png" alt="">
+            <h3>Postagens diárias</h3>
+        </div>
+        <div class="box-container">
+            <div class="box">
+                <div class="image">
+                    <img src="img/blog-1.jpg" alt="imagem um hamburger">
+                    <div class="icons">
+                        <a href="#"><i class="fas fa-calendar"></i>28 de Dezembro de 2021</a>
+                        <a href="#"><i class="fas fa-user"></i>Pelo administrador</a>
+                    </div>
+                </div>
+                <div class="content">
+                    <h3>O título do blog vai aqui</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, dolorum.</p>
+                    <a href="#" class="btn">Leia mais</a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="img/blog-2.jpg" alt="imagem dois hamburgueres">
+                    <div class="icons">
+                        <a href="#"><i class="fas fa-calendar"></i>28 de Dezembro de 2021</a>
+                        <a href="#"><i class="fas fa-user"></i>Pelo administrador</a>
+                    </div>
+                </div>
+                <div class="content">
+                    <h3>O título do blog vai aqui</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, dolorum.</p>
+                    <a href="#" class="btn">Leia mais</a>
+                </div>
+            </div>
+            <div class="box">
+                <div class="image">
+                    <img src="img/blog-3.jpg" alt="imagem um hamburguer">
+                    <div class="icons">
+                        <a href="#"><i class="fas fa-calendar"></i>28 de Dezembro de 2021</a>
+                        <a href="#"><i class="fas fa-user"></i>Pelo administrador</a>
+                    </div>
+                </div>
+                <div class="content">
+                    <h3>O título do blog vai aqui</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime, dolorum.</p>
+                    <a href="#" class="btn">Leia mais</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--blogs section ends-->
+
    <!--custom js file link-->
    <script src="java/script.js"></script>
 </body>
