--- a/index.html
+++ b/index.html
@@ -339,6 +339,19 @@
     </section>
     <!--blogs section ends-->
 
+    <!--footer section starts-->
+    <section class="footer">
+        <div class="links">
+            <a href="#home" class="btn">Home</a>
+            <a href="#menu" class="btn">Menu</a>
+            <a href="#about" class="btn">About</a>
+            <a href="#reviews" class="btn">Avaliações</a>
+            <a href="#contact" class="btn">Contato</a>
+            <a href="#blogs" class="btn">Blogs</a>
+        </div>
+    </section>
+    <!--footer section ends-->
+
    <!--custom js file link-->
    <script src="java/script.js"></script>
 </body>
