--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="css/reviews.css">
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/blogs.css">
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/mobile.css">
 </head>
 <body>
