--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- font awesome cnd link-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+
     <!--custon css file link-->
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/header.css">
@@ -47,27 +49,27 @@
     <!--home section starts-->
     <section class="home" id="home">
         <div class="content">
-            <img src="img/burger-baner.png" alt="imagem principal">
-            <h3>Tão gostoso que você vai enlouquecer</h3>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus quos blanditiis quam distinctio culpa molestiae labore iste eveniet laudantium. Magni fuga tempora autem vel, blanditiis nisi dolore ad minima perspiciatis?</p>
-            <a href="#menu" class="btn">Nosso menu</a>
+            <img data-aos="fade-up" data-aos-delay="150" src="img/burger-baner.png" alt="imagem principal">
+            <h3 data-aos="fade-up" data-aos-delay="300">Tão gostoso que você vai enlouquecer</h3>
+            <p data-aos="fade-up" data-aos-delay="450">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus quos blanditiis quam distinctio culpa molestiae labore iste eveniet laudantium. Magni fuga tempora autem vel, blanditiis nisi dolore ad minima perspiciatis?</p>
+            <a data-aos="fade-up" data-aos-delay="600" href="#menu" class="btn">Nosso menu</a>
         </div>
     </section>
     <!--home section ends-->
 
     <!--service section starts-->
     <section class="service">
-        <div class="box">
+        <div class="box" data-aos="fade-up" data-aos-delay="150">
             <i class="fas fa-hamburger"></i>
             <h3>Melhor qualidade</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat repudiandae quae, facere impedit voluptas in perspiciatis dicta, excepturi voluptatibus alias magni rem cupiditate inventore necessitatibus beatae, soluta hic ex nobis.</p>
         </div>
-        <div class="box">
+        <div class="box" data-aos="fade-up" data-aos-delay="300">
             <i class="fas fa-shipping-fast"></i>
             <h3>Entrega grátis</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat repudiandae quae, facere impedit voluptas in perspiciatis dicta, excepturi voluptatibus alias magni rem cupiditate inventore necessitatibus beatae, soluta hic ex nobis.</p>
         </div>
-        <div class="box">
+        <div class="box" data-aos="fade-up" data-aos-delay="450">
             <i class="fas fa-headset"></i>
             <h3>24/7 Apoio, suporte</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat repudiandae quae, facere impedit voluptas in perspiciatis dicta, excepturi voluptatibus alias magni rem cupiditate inventore necessitatibus beatae, soluta hic ex nobis.</p>
@@ -82,7 +84,7 @@
             <h3>Menu</h3>
         </div>
         <div class="box-container">
-            <div class="box">
+            <div class="box" data-aos="fade-up" data-aos-delay="150">
                 <img src="img/product-1.png" alt="imagem amburguer 1">
                 <div class="content">
                     <div class="stars">
@@ -97,7 +99,7 @@
                     <a href="#" class="btn">Adicionar ao carrinho</a>
                 </div>
             </div>
-            <div class="box">
+            <div class="box" data-aos="fade-up" data-aos-delay="300">
                 <img src="img/product-2.png" alt="imagem amburguer 1">
                 <div class="content">
                     <div class="stars">
@@ -112,7 +114,7 @@
                     <a href="#" class="btn">Adicionar ao carrinho</a>
                 </div>
             </div>
-            <div class="box">
+            <div class="box" data-aos="fade-up" data-aos-delay="450">
                 <img src="img/product-3.png" alt="imagem amburguer 1">
                 <div class="content">
                     <div class="stars">
@@ -127,7 +129,7 @@
                     <a href="#" class="btn">Adicionar ao carrinho</a>
                 </div>
             </div>
-            <div class="box">
+            <div class="box" data-aos="fade-up" data-aos-delay="600">
                 <img src="img/product-4.png" alt="imagem amburguer 1">
                 <div class="content">
                     <div class="stars">
@@ -142,7 +144,7 @@
                     <a href="#" class="btn">Adicionar ao carrinho</a>
                 </div>
             </div>
-            <div class="box">
+            <div class="box" data-aos="fade-up" data-aos-delay="750">
                 <img src="img/product-5.png" alt="imagem amburguer 1">
                 <div class="content">
                     <div class="stars">
@@ -157,7 +159,7 @@
                     <a href="#" class="btn">Adicionar ao carrinho</a>
                 </div>
             </div>
-            <div class="box">
+            <div class="box" data-aos="fade-up" data-aos-delay="900">
                 <img src="img/product-6.png" alt="imagem amburguer 1">
                 <div class="content">
                     <div class="stars">
@@ -178,10 +180,10 @@
 
     <!--about section starts-->
     <section class="about" id="about">
-        <div class="image">
+        <div class="image" data-aos="fade-right" data-aos-delay="150">
             <img src="img/about-img.png" alt="imagem seção sobre">
         </div>
-        <div class="content">
+        <div class="content" data-aos="fade-left" data-aos-delay="300">
             <h3 class="title">Entre no paraíso do hambúrguer</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quo dicta alias, maiores perspiciatis, quod quasi, fugit eos sapiente accusamus inventore! Labore nihil provident repellat esse id incidunt, rem sunt?</p>
             <div class="icons">
@@ -204,7 +206,7 @@
             <h3>Depoimento</h3>
         </div>
         <div class="box-container">
-            <div class="box">
+            <div class="box" data-aos="fade-up" data-aos-delay="150">
                 <img src="img/pic-1.png" alt="imagem mulher">
                 <h3>John deo</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum accusantium inventore accusamus non dolorem, obcaecati natus minima, nesciunt voluptas officia corrupti quidem iure, expedita totam corporis ex necessitatibus alias et.</p>
@@ -216,7 +218,7 @@
                     <i class="fas fa-star-half-alt"></i>
                 </div>
             </div>
-            <div class="box">
+            <div class="box" data-aos="fade-up" data-aos-delay="300">
                 <img src="img/pic-2.png" alt="imagem homem">
                 <h3>John deo</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum accusantium inventore accusamus non dolorem, obcaecati natus minima, nesciunt voluptas officia corrupti quidem iure, expedita totam corporis ex necessitatibus alias et.</p>
@@ -228,7 +230,7 @@
                     <i class="fas fa-star-half-alt"></i>
                 </div>
             </div>
-            <div class="box">
+            <div class="box" data-aos="fade-up" data-aos-delay="450">
                 <img src="img/pic-3.png" alt="imagem mulher2">
                 <h3>John deo</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum accusantium inventore accusamus non dolorem, obcaecati natus minima, nesciunt voluptas officia corrupti quidem iure, expedita totam corporis ex necessitatibus alias et.</p>
@@ -251,24 +253,24 @@
             <h3>Contate-nos</h3>
         </div>
         <div class="row">
-            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3651.276641116966!2d-46.720058185066435!3d-23.773161284578173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce492e72d23ccd%3A0xee94aef999efe202!2sR.%20Sat%C3%A9lite%20Ariel%20-%20Jardim%20Casa%20Grande%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2004858-490!5e0!3m2!1spt-BR!2sbr!4v1640645503297!5m2!1spt-BR!2sbr" 
+            <iframe class="map" data-aos="fade-up" data-aos-delay="150" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3651.276641116966!2d-46.720058185066435!3d-23.773161284578173!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce492e72d23ccd%3A0xee94aef999efe202!2sR.%20Sat%C3%A9lite%20Ariel%20-%20Jardim%20Casa%20Grande%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2004858-490!5e0!3m2!1spt-BR!2sbr!4v1640645503297!5m2!1spt-BR!2sbr" 
             allowfullscreen="" 
             loading="lazy">
             </iframe>
             <div class="form">
                 <div class="icons-container">
-                    <div class="icons">
+                    <div class="icons" data-aos="fade-up" data-aos-delay="150">
                         <i class="fas fa-map"></i>
                         <h3>Local :</h3>
                         <p>Mumbai, India - 400140</p>
                     </div>
-                    <div class="icons">
+                    <div class="icons" data-aos="fade-up" data-aos-delay="300">
                         <i class="fas fa-envelope"></i>
                         <h3>Email :</h3>
                         <p>gleibson.santos04@gmail.com</p>
                         <p>nshair@gmail.com</p>
                     </div>
-                    <div class="icons">
+                    <div class="icons" data-aos="fade-up" data-aos-delay="450">
                         <i class="fas fa-phone"></i>
                         <h3>Phone :</h3>
                         <p>+55 81 98469-7069</p>
@@ -276,11 +278,11 @@
                     </div>
                 </div>
                 <form action="">
-                    <input type="text" placeholder="Nome completo" class="box">
-                    <input type="email" placeholder="Email" class="box">
-                    <input type="number" placeholder="Telefone" class="box">
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Mensagem" class="box"></textarea>
-                    <input type="submit" value="enviar mensagem" class="btn">
+                    <input data-aos="fade-up" data-aos-delay="150" type="text" placeholder="Nome completo" class="box">
+                    <input data-aos="fade-up" data-aos-delay="300" type="email" placeholder="Email" class="box">
+                    <input data-aos="fade-up" data-aos-delay="450" type="number" placeholder="Telefone" class="box">
+                    <textarea data-aos="fade-up" data-aos-delay="600" name="" id="" cols="30" rows="10" placeholder="Mensagem" class="box"></textarea>
+                    <input data-aos="fade-up" data-aos-delay="750" type="submit" value="enviar mensagem" class="btn">
                 </form>
             </div>
         </div>
@@ -294,7 +296,7 @@
             <h3>Postagens diárias</h3>
         </div>
         <div class="box-container">
-            <div class="box">
+            <div class="box" data-aos="fade-up" data-aos-delay="150">
                 <div class="image">
                     <img src="img/blog-1.jpg" alt="imagem um hamburger">
                     <div class="icons">
@@ -308,7 +310,7 @@
                     <a href="#" class="btn">Leia mais</a>
                 </div>
             </div>
-            <div class="box">
+            <div class="box" data-aos="fade-up" data-aos-delay="300">
                 <div class="image">
                     <img src="img/blog-2.jpg" alt="imagem dois hamburgueres">
                     <div class="icons">
@@ -322,7 +324,7 @@
                     <a href="#" class="btn">Leia mais</a>
                 </div>
             </div>
-            <div class="box">
+            <div class="box" data-aos="fade-up" data-aos-delay="450">
                 <div class="image">
                     <img src="img/blog-3.jpg" alt="imagem um hamburguer">
                     <div class="icons">
@@ -355,5 +357,11 @@
 
    <!--custom js file link-->
    <script src="java/script.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+   <script>
+       AOS.init({
+           duration: 800,
+       })
+   </script>
 </body>
 </html>
